# StartupCrews

./: .gitignore  FEM_01 - План Продаж.csv  SellPlan.md  calculated_metrics.csv  input_data.csv  pyproject.toml
1. idea_generation_crew/: .gitignore  README.md  Report.md  pyproject.toml
1. idea_generation_crew/.gradio/flagged/: dataset1.csv
1. idea_generation_crew/db/: chroma.sqlite3
1. idea_generation_crew/src/idea_generation_crew/: crew.py  interface.py  main.py  run_interface.py
1. idea_generation_crew/src/idea_generation_crew/config/: agents.yaml  tasks.yaml
1. idea_generation_crew/src/idea_generation_crew/tools/: PerplexitySearchTool.py  StartupLawSpain.txt
2. MarketAttractiveness/: Instruction.md  NewIdea.md
2. MarketAttractiveness/marketattractivenessflow/: .gitignore  MarketAttractivenessReport.md  README.md  pyproject.toml  test_env.py
2. MarketAttractiveness/marketattractivenessflow/Reports/: Barriers_to_Entry_2_2.md
2. MarketAttractiveness/marketattractivenessflow/src/marketattractivenessflow/: main.py
2. MarketAttractiveness/marketattractivenessflow/src/marketattractivenessflow/crews/barriers_to_entry_crew_2_2/: barriers_to_entry_crew_2_2.py
2. MarketAttractiveness/marketattractivenessflow/src/marketattractivenessflow/crews/competence_level_crew_2_3/: competence_level_crew_2_3.py
2. MarketAttractiveness/marketattractivenessflow/src/marketattractivenessflow/crews/demand_analysis_crew_2_1/: demand_analysis_crew_2_1.py
2. MarketAttractiveness/marketattractivenessflow/src/marketattractivenessflow/crews/final_report_crew/: final_report_crew.py
2. MarketAttractiveness/marketattractivenessflow/src/marketattractivenessflow/crews/research_planner_crew/: research_planner_crew.py
2. MarketAttractiveness/marketattractivenessflow/src/marketattractivenessflow/crews/scalability_crew_2_4/: scalability_crew_2_4.py
2. MarketAttractiveness/marketattractivenessflow/src/marketattractivenessflow/tools/: PerplexitySearchTool.py  char_counter_tool.py
3. BusinesDescription/business_description_crew/: .gitignore  Patent_Development_1_1.md  README.md  business_model.md  pyproject.toml  report.md
3. BusinesDescription/business_description_crew/Reports/: business_model.md
3. BusinesDescription/business_description_crew/src/business_description_crew/: main.py
(+52 files in other folders)
