[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "marketattractivenessflow"
version = "0.1.0"
description = "Market Attractiveness Analysis System"
packages = [
    { include = "marketattractivenessflow", from = "src" }
]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
crewai = {extras = ["tools"], version = "^0.95.0"}
agentops = "^0.3.23"
python-dotenv = "^1.0.0" 