[project]
name = "idea_generation_crew"
version = "0.1.0"
description = "idea_generation_crew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.95.0,<1.0.0"
]

[project.scripts]
idea_generation_crew = "idea_generation_crew.main:run"
run_crew = "idea_generation_crew.main:run"
train = "idea_generation_crew.main:train"
replay = "idea_generation_crew.main:replay"
test = "idea_generation_crew.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
