[project]
name = "business_description_crew"
version = "0.1.0"
description = "business_description_crew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.76.9,<1.0.0",
]

[project.scripts]
kickoff = "business_description_crew.main:kickoff"
plot = "business_description_crew.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
